Replace usage of javax.xml.bind.DatatypeConverter with alternative approaches that also work on Android.
- copy Apache commons-codec's Hex class source code and remove its
dependency on other Apache commons-codec interfaces
- use Apache commons-codec's Hex class instead of
javax.xml.bind.DatatypeConverter.parseHexBinary()
- use java.xml.datatype.XMLGregorianCalendar for parsing xsd:dateTime
strings instead of javax.xml.bind.DatatypeConverter.parseDateTime()
- fix decoding of opaque values from JSON to assume base64 encoding
instead of plain hexBinary encoding.
- use Apache commons-codec Base64 class instead of
DatatypeConverter.printBase64Binary() to encode opaque values
to JSON.